add gitignore file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="all-projects/photo_studio_sait/src/index.html">Photo_studio</a></li>
         <li><a href="all-projects/radio_sait/src/index.html">Radio</a></li>
     </ol>
+    <p>Тут не стоит сохранение кэша, так что если что то не обновляется - это кеш.</p>
 </body>
 
 </html>
